--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "next": "10.0.6",
-    "react": "17.0.1",
+    "next-auth": "^3.4.2",
+    "react": "^17.0.1",
     "react-dom": "17.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3"
