--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.17",
     "next": "10.0.6",
     "next-auth": "^3.4.2",
     "react": "^17.0.1",
