--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "10.0.6",
     "next-auth": "^3.4.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "17.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
