--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "firebase": "^8.3.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.17",
     "next": "10.0.6",
