--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "firebase": "^8.3.1",
+    "js-base64": "^3.6.0",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.17",
     "next": "10.0.6",
