--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hfb-inventory-tracker",
-  "version": "0.1.0",
-  "private": true,
+  "name": "hfb-mobile-manager",
+  "version": "1.1.0",
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
