--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-base64": "^3.6.0",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.17",
+    "mysql": "^2.18.1",
     "next": "10.0.6",
     "next-auth": "^3.4.2",
     "react": "^17.0.1",
